Clean up configuration files

--- a/files_for_ftp/default.cfg
+++ b/files_for_ftp/default.cfg
@@ -16,6 +16,9 @@ ap_password=fli3d_backdoor
 #
 # ftp server by Fli3d ESP32
 #
+# encoding for ftp_fs:
+# LITTLEFS: 1
+# SD_MMC:   2
 ftp_enable=1
 ftp_fs=1
 ftp_user=esp32
@@ -36,6 +39,9 @@ yamcs_tc_port=10052
 #
 # file system
 #
+# encoding for buffer_fs:
+# LITTLEFS: 1
+# SD_MMC:   2
 fs_enable=1
 buffer_fs=1
 #
@@ -56,7 +62,10 @@ camera_enable=1
 #
 # serial communications settings
 #
-serial_format=1
+# encoding for serial_format:
+# CCSDS: 0
+# JSON:  1
+serial_format=0
 #
 # sensor settings
 #
